# xeez-pyutils

./: .gitignore  README.md  exceptions.py  pyproject.toml  responses.py
pyutils/: common.py
pyutils/protocols/: service_protocol.py
src/protocols/: service_protocol.py
src/xeez_pyutils/: sqlalchemy_repository.py
src/xeez_pyutils/protocols/: repository_protocol.py  service_protocol.py
